# fastapi-demo

./: README.md  main.py  pyproject.toml
db/: demo-db.json
fastapi_demo/: __init__.py  models.py
